# knot-mosaics

./: .gitignore  LICENSE  arg_parsing.py  bulk_parser.sh  cubic-site-gen.py  cylindrical.py  environment.yml  homflys3-13.csv  index.html  latex-gen.py  main.py  mosaic_builder.html  mosaic_tools.py  mosaic_util.py  mosaic_view.py  mosaic_vis.py  mosaics.py  polynomial_standardization.py  pyproject.toml  sage_funcs.py  site-gen.py  site_template.html  test.py  toric.py  toric_test.py
.zed/: tasks.json
homflys/: HOMFLY_intersections(<10).txt  HOMFLY_intersections.txt  homflys3-13(knotinfo-format).csv  knotsToHOMFLY.txt
mosaic-gen/: Cargo.toml  bulk_gen.sh  conn_table.rs  main.rs  mosaics.rs  rolling_buff.rs
